# Tea

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  add-to-path.bat  pyproject.toml  readme.md  requirements.txt  tea-config.json  tea-history.json  tea.bat  tea.py  tea.py.backup  timestamps.json
.github/workflows/: lint.yml  security.yml  test.yml
docs/: API.md  DEVELOPMENT.md  __init__.py
examples/: bossa-nova-timestamps.json
tea/: __init__.py  cli.py  config.py  constants.py  downloader.py  exceptions.py  ffmpeg.py  history.py  info.py  logger.py  progress.py  search.py  timestamps.py  ux.py
tea/ai/: __init__.py  filename_cleaner.py
tea/utils/: __init__.py  security.py  spinner.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_downloader.py  test_history.py  test_security.py
tests/integration/: __init__.py  test_download_workflow.py
